<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.vt.cs.cs5254.answerbuttons.ButtonActivity">

    <TextView
        android:id="@+id/question_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        tools:text="@string/question_australia_capital"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/answerContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_textview">

        <Button
            android:id="@+id/answer_button0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/answer_brisbane"/>

        <Button
            android:id="@+id/answer_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/answer_canberra"/>

        <Button
            android:id="@+id/answer_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/answer_perth"/>

        <Button
            android:id="@+id/answer_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/answer_sydney"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/adminContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerContainer">

        <Button
            android:id="@+id/disable_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/disable_button_name"/>

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/reset_button_name"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
